--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
