--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3.2.5",
     "@thirdweb-dev/sdk": "^3.2.5",
+    "axios": "^1.1.3",
     "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
